syntax = "proto3";
option optimize_for = SPEED;
option java_outer_classname = "MyDataInfo";
//protobuf可以使用message管理其他的message
message MyMessage{
  enum DataType{
    StudentType = 0;
    WorkerType = 1;
  }
  //用dataType来表示哪个枚举类型
  DataType dataType = 1;
  //表示每次枚举类型最多只能出现其中的一个，节省空间
  oneof dataBody{
    Student student = 2;
    Worker worker = 3;
  }
}
message Student{
  int32 id = 1;
  string name = 2;
}
message Worker{
  string name = 1;
  int32 age = 2;
}